<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>awsiotcore_to_navigation2</name>
  <version>0.1.0</version>
  <description>Receive MQTT with coordinate information from AWS IoT Core and pass it to Navigation2.</description>
  <maintainer email="tokuro_kono@r.recruit.co.jp">Tokuro Kono</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>awsiotsdk</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
